add plans for evaluation

--- a/rag/rag_gh_repo.ipynb
+++ b/rag/rag_gh_repo.ipynb
@@ -423,6 +423,48 @@
     "\n",
     "print(sources)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create evaluation data (manually label relevant documents for queries)\n",
+    "# something like [{\"query\": \"How to do data science in Visual Studio Code?\", \"relevant_docs\": [1, 3, 7]}, ...]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# run evaluation using precision@k (proportion of the top `k` retrieved documents that are relevant) - could use other metrics like recall@k, mean average precision, NDCG@k, etc., but this would be good starting point"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# precision@k calculation ((# of relevant docs in top k) / k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Deploy RAG model as an API & use from the app"
+   ]
   }
  ],
  "metadata": {
