token name change

--- a/rag/rag_model_exploration.ipynb
+++ b/rag/rag_model_exploration.ipynb
@@ -381,7 +381,8 @@
     "\n",
     "embeddings_client = EmbeddingsClient(\n",
     "    endpoint=endpoint,\n",
-    "    credential=AzureKeyCredential(os.environ[\"AZURE_TOKEN\"])\n",
+    "    credential=AzureKeyCredential(os.environ[\"GITHUB_TOKEN\"])\n",
+    "    # credential=AzureKeyCredential(os.environ[\"AZURE_TOKEN\"])\n",
     ")\n",
     "\n",
     "def generate_embeddings(text, model=\"text-embedding-3-small\"):\n",
@@ -556,7 +557,8 @@
     "\n",
     "gpt_client = OpenAI(\n",
     "    base_url=\"https://models.inference.ai.azure.com\",\n",
-    "    api_key=os.getenv(\"AZURE_TOKEN\")\n",
+    "    api_key=os.getenv(\"GITHUB_TOKEN\")\n",
+    "    # api_key=os.getenv(\"AZURE_TOKEN\")\n",
     ")    \n",
     "\n",
     "system_message = \"\"\"\n",
