--- a/rag/rag_model_exploration.ipynb
+++ b/rag/rag_model_exploration.ipynb
@@ -26,7 +26,9 @@
     "3. Conduct a **semantic search** over the full-text search & get top 3 results - experimenting with embeddings models\n",
     "4. **Generate answer** based on the results - experimenting with completions models\n",
     "\n",
-    "_(If you're familiar with RAG, you already know which part of the hybrid search was modified 😉)_"
+    "_(If you're familiar with RAG, you already know which part of the hybrid search was modified 😉)_\n",
+    "\n",
+    "![outline](./outline.png)"
    ]
   },
   {
