--- a/rag/rag_model_exploration.ipynb
+++ b/rag/rag_model_exploration.ipynb
@@ -11,19 +11,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instead of being grounded in single content, what if we want the chat to generate content from multiple sources? Let's integrate VS Code release notes as referenceable data using **RAG and modified hybrid search** for the chat to provide outputs with broader set of context."
+    "Instead of being grounded in single content, what if we want the chat to generate content using knowledge from multiple sources? Now that we know how to deploy our app with RAG, let's integrate VS Code release notes as referenceable data using **RAG and modified hybrid search** for the chat to provide outputs with broader set of context."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Normally, we'd leverage proprietary data for RAG, but since this is a public demo, we'll use publicly available VS Code release notes to give users insights into recent updates, new features, and workflow improvements. The goal here isn't just to showcase RAG itself, but to demonstrate how RAG can be explored with different embedding models and completion models to optimize results.\n",
+    "Normally, we'd leverage proprietary data for RAG, but since this is a public demo, we'll use publicly available VS Code release notes to give users insights into recent updates, new features, and workflow improvements. The goal here isn't to showcase RAG itself, but to **demonstrate how RAG can be explored with different embedding models and completion models to optimize results**.\n",
     "\n",
     "**So here is our plan:**\n",
     "1. Use TF-IDF to **extract keywords** from user query\n",
     "2. Conduct **full-text search** from the extracted keywords & get top 10 results\n",
-    "3. Conduct a **semantic search** over the full-text search & get top 3 results - experimenting with embeddings models\n",
+    "3. Conduct a **semantic search** over the result of the full-text search & get top 3 results - experimenting with embeddings models\n",
     "4. **Generate answer** based on the results - experimenting with completions models\n",
     "\n",
     "_(If you're familiar with RAG, you already know which part of the hybrid search was modified 😉)_\n",
