--- a/rag/rag_model_exploration.ipynb
+++ b/rag/rag_model_exploration.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "Let's first try answering the question, `\"What are recent features for Copilot chat in notebooks?\"` using an off-the-shelf LLM model.\n",
     "\n",
-    "We can navigate to GitHub Marketplace to answer the question using one of the models through the built-in playground:\n",
+    "We can navigate to [GitHub Models](https://github.com/marketplace/models) to answer the question using one of the models through the built-in playground:\n",
     "\n",
     "![gpt-4o-mini-answer](./gpt-4o-mini-answer.png)"
    ]
@@ -383,7 +383,7 @@
    "source": [
     "### Vector similarity search\n",
     "\n",
-    "Now let's conduct a vector similarity search using FAISS. We'll first copy over getting started code for using  embeddings models from [GitHub Marketplace](https://github.com/marketplace/models).\n",
+    "Now let's conduct a vector similarity search using FAISS. We'll first copy over getting started code for using  embeddings models from [GitHub Models](https://github.com/marketplace/models).\n",
     "\n",
     "This is especially convenient with our workflow, because **GitHub token is automatically injected into Codespaces**."
    ]
@@ -564,7 +564,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I think we're ready to try out our RAG system! Remember the answer to our question, `\"What are recent features for Copilot chat in notebooks?\"` using an LLM model straight out of the box? You can also experiment with it here just as you did in the Marketplace playground."
+    "I think we're ready to try out our RAG system! Remember the answer to our question, `\"What are recent features for Copilot chat in notebooks?\"` using an LLM model straight out of the box? You can also experiment with it here just as you did in the [GitHub Models](https://github.com/marketplace/models) playground."
    ]
   },
   {
@@ -573,7 +573,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Copy the code snippet from GH marketplace\n",
+    "# Copy the code snippet from GH Models\n",
     "from openai import OpenAI\n",
     "import os\n",
     "\n",
@@ -681,7 +681,7 @@
    "source": [
     "## 🚀 Test combinations of AI models for the RAG system\n",
     "\n",
-    "Use [GitHub Marketplace](https://github.com/marketplace/models) to find and experiment with AI models. Replace `embedidings_model` and `completion_model` names found in the marketplace:\n",
+    "Replace `embedidings_model` and `completion_model` names with ones found on [GitHub Models](https://github.com/marketplace/models) to experiment with AI models:\n",
     "\n",
     "```python\n",
     "q = \"What are recent features for Copilot chat in notebooks?\"\n",
